--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.445.0",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.61.1",
+    "react-resizable-panels": "^3.0.4",
     "recharts": "^3.1.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^2.5.4",
